# dollardollar

./: Dockerfile  Makefile  add_column.py  app.py  config.py  database.py  demo_reset.py  extensions.py  fix_currency.py  gocardless.py  gocardless_client.py  init_db.py  oidc_auth.py  oidc_user.py  pyproject.toml  recurring_detection.py  requirements.txt  reset.py  session_timeout.py  simplefin_client.py  update_currencies.py  util.py
.github/workflows/: docker-image.yml
migrations/versions/: fa30da7c13da_initial_migration.py
models/: __init__.py  account.py  budget.py  category.py  currency.py  expense.py  gocardless.py  group.py  recurring.py  settlement.py  simplefin.py  tag.py  user.py
openssl/: openssl-legacy.cnf
routes/: __init__.py  account_routes.py  admin_routes.py  auth_routes.py  budget_routes.py  category_routes.py  currency_routes.py  dashboard_routes.py  demo_routes.py  expense_routes.py  gocardless_routes.py  group_routes.py  maintenance_routes.py  password_reset_routes.py  recurring_routes.py  report_routes.py  settlement_routes.py  simplefin_routes.py  stat_routes.py  tag_routes.py  timezone_routes.py  transaction_routes.py  user_routes.py
services/: const.py  defaults.py  extensions.py  gocardless_client.py  helpers.py  recurring_detection.py  reports.py  session_timeout.py  simplefin_client.py  update_currencies.py  util.py  wrappers.py
services/oidc/: oidc_auth.py  oidc_user.py
templates/: accounts.html  admin.html  advanced.html  base.html  categories.html  category_mappings.html  currencies.html  dashboard.html  dashboard_test.html  group_details.html  groups.html  import_results.html  login.html  profile.html  settlements.html  simplefin_accounts.html  tags.html
templates/demo/: demo_concurrent.html  demo_expired.html  demo_thanks.html
templates/gocardless/: accounts.html  advanced_tab.html  choose_bank.html  customize_accounts.html
templates/partials/: add_transaction_form.html
